fixed spacing

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ video {
 }
 
 .cta:hover {
-  color: white;
+  color: rgb(255, 255, 255);
   background-color: #c43526;
 }
 
@@ -610,6 +610,7 @@ video {
 
 #contact .contact-item:hover {
   box-shadow: 0px 0px 5px 0 #0000002c;
+  background-color: #ADD8E6;
 }
 
 #contact .icon {
